--- a/_posts/2018-1-29-here-i-am.md
+++ b/_posts/2018-1-29-here-i-am.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: Here I am 
+title: Hello World 
 tags: jekyll markdown
 ---
 
 Hi It's me!
 
 I'm a tech enthusiast who's always trying new stuff, now I'm currently changing my carrer, from sysadmin 
-to software development.
+to software development. 
 Now, I'm starting with Jekyll and Markdown so I can put this site up and running!.
 
 
